# mspr2-m1-back

./: .env.example  .gitignore  Jenkinsfile  README.md  docker-compose.yml
backend-central/: Dockerfile  pyproject.toml
backend-central/app/: main.py
backend-central/app/core/: aggregator.py  config.py
backend-central/app/routes/: central.py
backend-central/tests/: test_aggregator.py  test_central_routes.py  test_central_routes_extra.py
backend-pays/: .dockerignore  Dockerfile  pyproject.toml
backend-pays/app/: main.py
backend-pays/app/core/: config.py  database.py
backend-pays/app/models/: __init__.py  alerte.py  lot.py  mesure.py
backend-pays/app/routes/: alertes.py  lots.py  lots_mesures.py  mesures.py
backend-pays/app/schemas/: __init__.py  alerte.py  lot.py  mesure.py
backend-pays/app/services/: alert_rules.py  alert_service.py  email_service.py  mqtt_service.py  scheduler_service.py
backend-pays/tests/: conftest.py  test_alert_rules.py  test_email_service.py  test_integration_mqtt.py  test_routes_alertes.py  test_routes_lots.py  test_routes_mesures.py  test_scheduler_service.py  test_schemas.py
scripts/: seed_demo.sh  seed_lots.py  simulate_pi.py
